# coursework_1

./: CMakeLists.txt  LICENSE  README.md
include/: abstractPhysics.hpp  computeTest.hpp  debugInformer.hpp  dumbPhysics.hpp  envSky.hpp  font.hpp  shader.hpp  sineSumPhysics.hpp  waterMesh.hpp  waterMeshChunk.hpp  wave1.hpp  wave2.hpp
include/util/: camera.hpp  image.hpp  shader.hpp  stb_image.hpp  utility.hpp
misc/: norm.frag  norm.geom  norm.vert
shaders/: butt.comp  conv.comp  font.frag  font.vert  fourier.comp  h0.comp  ht.comp  norm.comp  norm.geom  norm.vert  normc.comp  perlin.comp  phys.comp  poly.frag  poly.vert  sineSum.comp  sun.frag  sun.vert  tx.frag  tx.vert  water.frag  water.vert
src/: computeTest.cpp  debugInformer.cpp  dumbPhysics.cpp  envSky.cpp  font.cpp  main.cpp  shader.cpp  sineSumPhysics.cpp  waterMesh.cpp  waterMeshChunk.cpp
src/util/: font.cpp  image.cpp  shader.cpp  utility.cpp
